Added gh pages demo

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "js-os",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://rajagopalan-gangadharan.github.io/JS-OS/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
@@ -27,6 +28,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
