--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "i": "^0.3.6",
     "interactjs": "^1.3.4",
     "jquery": "^3.4.1",
-    "npm": "^6.13.2",
+    "monaco-editor": "^0.18.1",
+    "npm": "^6.13.4",
     "react": "^16.4.1",
     "react-ace": "^6.1.4",
     "react-dom": "^16.4.2",
@@ -20,6 +21,7 @@
     "react-full-screen": "^0.2.2",
     "react-icons": "^3.0.4",
     "react-iframe": "^1.2.0",
+    "react-monaco-editor": "^0.32.1",
     "react-scripts": "1.1.4",
     "react-trumbowyg": "^1.1.0",
     "request": "^2.88.0"
