--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
+  "proxy": "http://localhost:3020",
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
