--- a/package.json
+++ b/package.json
@@ -70,7 +70,10 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "client": "npm start",
+    "server": "cd src/server && nodemon index.js",
+    "dev": "concurrently \"npm run server \" \"npm run client\""
   },
   "devDependencies": {
     "gh-pages": "^2.0.1"
