--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "private": true,
   "homepage": "https://rajagopalan-gangadharan.github.io/JS-OS/",
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
     "@ckeditor/ckeditor5-build-classic": "^21.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "@react-pdf/renderer": "^1.6.10",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.5.0",
     "html-to-react": "^1.3.3",
     "i": "^0.3.6",
     "interactjs": "^1.3.4",
     "jquery": "^3.3.1",
     "npm": "^6.3.0",
     "pdf-viewer-reactjs": "^2.0.7",
-    "react": "^16.4.1",
+    "react": "^16.13.1",
     "react-ace": "^6.1.4",
     "react-bootstrap": "^1.3.0",
     "react-clock": "^2.4.0",
@@ -27,10 +28,15 @@
     "react-full-screen": "^0.2.2",
     "react-icons": "^3.0.4",
     "react-iframe": "^1.2.0",
+    "react-image-gallery": "^1.0.8",
+    "react-items-carousel": "^2.8.0",
     "react-pdf": "^4.2.0",
     "react-read-pdf": "^2.0.9",
+    "react-responsive-carousel": "^3.2.9",
     "react-scripts": "2.0.0-next.3e165448",
+    "react-slideshow-image": "^3.0.2",
     "react-trumbowyg": "^1.1.0",
+    "react-viewer": "^3.2.2",
     "request": "^2.88.0"
   },
   "scripts": {
