--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "homepage": "https://rajagopalan-gangadharan.github.io/JS-OS/",
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55",
     "@ckeditor/ckeditor5-build-classic": "^21.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
+    "@fullcalendar/daygrid": "^5.3.0",
+    "@fullcalendar/interaction": "^5.3.0",
+    "@fullcalendar/react": "^5.3.0",
+    "@fullcalendar/timegrid": "^5.3.0",
     "@react-pdf/renderer": "^1.6.10",
     "bootstrap": "^4.5.0",
     "html-to-react": "^1.3.3",
@@ -21,6 +24,7 @@
     "react": "^16.13.1",
     "react-ace": "^6.1.4",
     "react-bootstrap": "^1.3.0",
+    "react-calendar": "^3.1.0",
     "react-clock": "^2.4.0",
     "react-dom": "^16.4.1",
     "react-fontawesome": "^1.6.1",
@@ -35,6 +39,7 @@
     "react-responsive-carousel": "^3.2.9",
     "react-scripts": "2.0.0-next.3e165448",
     "react-slideshow-image": "^3.0.2",
+    "react-spreadsheet": "^0.4.47",
     "react-trumbowyg": "^1.1.0",
     "react-viewer": "^3.2.2",
     "request": "^2.88.0"
