--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://rajagopalan-gangadharan.github.io/JS-OS/",
   "dependencies": {
+    "@babel/runtime": "^7.11.2",
     "@ckeditor/ckeditor5-build-classic": "^21.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
@@ -13,6 +14,7 @@
     "@fullcalendar/interaction": "^5.3.0",
     "@fullcalendar/react": "^5.3.0",
     "@fullcalendar/timegrid": "^5.3.0",
+    "@monaco-editor/react": "^3.6.2",
     "@react-pdf/renderer": "^1.6.10",
     "bootstrap": "^4.5.0",
     "html-to-react": "^1.3.3",
@@ -34,15 +36,21 @@
     "react-iframe": "^1.2.0",
     "react-image-gallery": "^1.0.8",
     "react-items-carousel": "^2.8.0",
+    "react-markdown": "^4.3.1",
+    "react-minesweeper": "^1.0.2",
+    "react-monaco-editor": "^0.39.1",
     "react-pdf": "^4.2.0",
     "react-read-pdf": "^2.0.9",
     "react-responsive-carousel": "^3.2.9",
-    "react-scripts": "2.0.0-next.3e165448",
+    "react-scripts": "3.2.0",
     "react-slideshow-image": "^3.0.2",
     "react-spreadsheet": "^0.4.47",
+    "react-three-fiber": "^3.0.3",
     "react-trumbowyg": "^1.1.0",
     "react-viewer": "^3.2.2",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "semantic-ui-react": "^1.2.1",
+    "three": "^0.109.0"
   },
   "scripts": {
     "start": "react-scripts start",
