--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "i": "^0.3.6",
     "interactjs": "^1.3.4",
     "jquery": "^3.3.1",
+    "monaco-editor": "^0.19.0",
+    "monaco-editor-webpack-plugin": "^1.9.0",
     "npm": "^6.3.0",
     "pdf-viewer-reactjs": "^2.0.7",
     "react": "^16.13.1",
@@ -38,9 +40,10 @@
     "react-items-carousel": "^2.8.0",
     "react-markdown": "^4.3.1",
     "react-minesweeper": "^1.0.2",
-    "react-monaco-editor": "^0.39.1",
+    "react-monaco-editor": "^0.32.1",
     "react-pdf": "^4.2.0",
     "react-read-pdf": "^2.0.9",
+    "react-resize-detector": "^5.0.7",
     "react-responsive-carousel": "^3.2.9",
     "react-scripts": "3.2.0",
     "react-slideshow-image": "^3.0.2",
@@ -53,15 +56,16 @@
     "three": "^0.109.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-app-rewired eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "react-app-rewired": "^2.1.6"
   },
   "browserslist": {
     "development": [
