--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/react": "^5.3.0",
     "@fullcalendar/timegrid": "^5.3.0",
     "@monaco-editor/react": "^3.6.2",
+    "@react-latest-ui/react-sticky-notes": "^0.2.6",
     "@react-pdf/renderer": "^1.6.10",
     "bootstrap": "^4.5.0",
     "html-to-react": "^1.3.3",
