--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "monaco-editor": "^0.19.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
     "npm": "^6.3.0",
+    "object-sizeof": "^1.6.1",
     "pdf-viewer-reactjs": "^2.0.7",
     "react": "^16.13.1",
     "react-ace": "^6.1.4",
