--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-pdf/renderer": "^1.6.10",
     "bootstrap": "^4.5.0",
     "html-to-react": "^1.3.3",
+    "html2canvas": "^1.0.0-rc.7",
     "i": "^0.3.6",
     "interactjs": "^1.3.4",
     "jquery": "^3.3.1",
