--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@monaco-editor/react": "^3.6.2",
     "@react-latest-ui/react-sticky-notes": "^0.2.6",
     "@react-pdf/renderer": "^1.6.10",
+    "@uiw/react-markdown-editor": "^2.0.0",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.0",
+    "draft-js": "^0.11.7",
     "html-to-react": "^1.3.3",
     "html2canvas": "^1.0.0-rc.7",
     "i": "^0.3.6",
@@ -30,6 +33,7 @@
     "pdf-viewer-reactjs": "^2.0.7",
     "react": "^16.13.1",
     "react-ace": "^6.1.4",
+    "react-awesome-button": "^6.5.1",
     "react-bootstrap": "^1.3.0",
     "react-calendar": "^3.1.0",
     "react-clock": "^2.4.0",
@@ -48,9 +52,11 @@
     "react-read-pdf": "^2.0.9",
     "react-resize-detector": "^5.0.7",
     "react-responsive-carousel": "^3.2.9",
+    "react-router": "^5.2.0",
     "react-scripts": "3.2.0",
     "react-slideshow-image": "^3.0.2",
     "react-spreadsheet": "^0.4.47",
+    "react-syntax-highlighter": "^13.5.1",
     "react-three-fiber": "^3.0.3",
     "react-trumbowyg": "^1.1.0",
     "react-viewer": "^3.2.2",
