--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.0",
     "draft-js": "^0.11.7",
+    "glot-api": "^0.1.0",
     "html-to-react": "^1.3.3",
     "html2canvas": "^1.0.0-rc.7",
     "i": "^0.3.6",
