--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "js-os",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rajagopalan-gangadharan.github.io/Portfolio/",
+  "homepage": "https://rajagopalan-gangadharan.github.io/JS-OS/",
   "dependencies": {
     "@babel/runtime": "^7.11.2",
     "@ckeditor/ckeditor5-build-classic": "^21.0.0",
@@ -76,7 +76,7 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1",
+    "gh-pages": "^2.2.0",
     "react-app-rewired": "^2.1.6"
   },
   "browserslist": {
