--- a/package.json
+++ b/package.json
@@ -4,64 +4,64 @@
   "private": true,
   "homepage": "https://rajagopalan-gangadharan.github.io/JS-OS/",
   "dependencies": {
-    "@babel/runtime": "^7.11.2",
+    
     "@ckeditor/ckeditor5-build-classic": "^21.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
-    "@fortawesome/react-fontawesome": "0.1.0-11",
+    
+    
+    
     "@fullcalendar/daygrid": "^5.3.0",
     "@fullcalendar/interaction": "^5.3.0",
     "@fullcalendar/react": "^5.3.0",
     "@fullcalendar/timegrid": "^5.3.0",
-    "@monaco-editor/react": "^3.6.2",
+    
     "@react-latest-ui/react-sticky-notes": "^0.2.6",
-    "@react-pdf/renderer": "^1.6.10",
+    "@tinymce/tinymce-react":"3.13.0",
     "@uiw/react-markdown-editor": "^2.0.0",
-    "argparse": "^2.0.0",
+    "ace":"1.3.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "draft-js": "^0.11.7",
-    "glot-api": "^0.1.0",
-    "html-to-react": "^1.3.3",
+    
+    
     "html2canvas": "^1.0.0-rc.7",
-    "i": "^0.3.6",
+    
     "interactjs": "^1.3.4",
-    "jquery": "^3.3.1",
-    "monaco-editor": "^0.19.0",
+    
+    
     "monaco-editor-webpack-plugin": "^1.9.0",
-    "npm": "^6.3.0",
+    
     "object-sizeof": "^1.6.1",
-    "pdf-viewer-reactjs": "^2.0.7",
+    "prop-types":"15.7.2",
     "react": "^16.13.1",
-    "react-ace": "^6.1.4",
+    
     "react-awesome-button": "^6.5.1",
     "react-bootstrap": "^1.3.0",
-    "react-calendar": "^3.1.0",
+    
     "react-clock": "^2.4.0",
     "react-dom": "^16.4.1",
-    "react-fontawesome": "^1.6.1",
-    "react-froala-wysiwyg": "^2.8.4",
+    
+    
     "react-full-screen": "^0.2.2",
     "react-icons": "^3.0.4",
     "react-iframe": "^1.2.0",
     "react-image-gallery": "^1.0.8",
-    "react-items-carousel": "^2.8.0",
+    
     "react-markdown": "^4.3.1",
     "react-minesweeper": "^1.0.2",
     "react-monaco-editor": "^0.32.1",
-    "react-pdf": "^4.2.0",
-    "react-read-pdf": "^2.0.9",
+    
+    
     "react-resize-detector": "^5.0.7",
-    "react-responsive-carousel": "^3.2.9",
+    
     "react-router": "^5.2.0",
-    "react-scripts": "3.2.0",
-    "react-slideshow-image": "^3.0.2",
-    "react-spreadsheet": "^0.4.47",
+    
+    
+    
     "react-syntax-highlighter": "^13.5.1",
     "react-three-fiber": "^3.0.3",
-    "react-trumbowyg": "^1.1.0",
-    "react-viewer": "^3.2.2",
+    "regenerator-runtime":"0.13.9",
+    
     "request": "^2.88.0",
     "semantic-ui-react": "^1.2.1",
     "three": "^0.109.0",
@@ -76,8 +76,8 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0",
-    "react-app-rewired": "^2.1.6"
+    
+    
   },
   "browserslist": {
     "development": [
