--- a/package.json
+++ b/package.json
@@ -4,67 +4,45 @@
   "private": true,
   "homepage": "https://rajagopalan-gangadharan.github.io/JS-OS/",
   "dependencies": {
-    
     "@ckeditor/ckeditor5-build-classic": "^21.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
-    
-    
-    
     "@fullcalendar/daygrid": "^5.3.0",
     "@fullcalendar/interaction": "^5.3.0",
     "@fullcalendar/react": "^5.3.0",
     "@fullcalendar/timegrid": "^5.3.0",
-    
     "@react-latest-ui/react-sticky-notes": "^0.2.6",
-    "@tinymce/tinymce-react":"3.13.0",
+    "@tinymce/tinymce-react": "3.13.0",
     "@uiw/react-markdown-editor": "^2.0.0",
-    "ace":"1.3.0",
+    "ace": "1.3.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "draft-js": "^0.11.7",
-    
-    
     "html2canvas": "^1.0.0-rc.7",
-    
     "interactjs": "^1.3.4",
-    
-    
     "monaco-editor-webpack-plugin": "^1.9.0",
-    
     "object-sizeof": "^1.6.1",
-    "prop-types":"15.7.2",
+    "prop-types": "15.7.2",
     "react": "^16.13.1",
-    
+    "react-app-rewired": "^2.1.8",
     "react-awesome-button": "^6.5.1",
     "react-bootstrap": "^1.3.0",
-    
     "react-clock": "^2.4.0",
     "react-dom": "^16.4.1",
-    
-    
     "react-full-screen": "^0.2.2",
     "react-icons": "^3.0.4",
     "react-iframe": "^1.2.0",
     "react-image-gallery": "^1.0.8",
-    
     "react-markdown": "^4.3.1",
     "react-minesweeper": "^1.0.2",
     "react-monaco-editor": "^0.32.1",
-    
-    
     "react-resize-detector": "^5.0.7",
-    
     "react-router": "^5.2.0",
-    
-    
-    
     "react-syntax-highlighter": "^13.5.1",
-    "react-three-fiber": "^3.0.3",
-    "regenerator-runtime":"0.13.9",
-    
+    "regenerator-runtime": "0.13.9",
     "request": "^2.88.0",
     "semantic-ui-react": "^1.2.1",
-    "three": "^0.109.0",
+    "three": "^0.135.0",
+    "webpack": "^4.44.2",
     "yargs-parser": "^19.0.1"
   },
   "scripts": {
@@ -74,10 +52,6 @@
     "eject": "react-app-rewired eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "devDependencies": {
-    
-    
   },
   "browserslist": {
     "development": [
