hover-on-taskbar

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-fontawesome": "^1.6.1",
     "react-froala-wysiwyg": "^2.8.4",
     "react-full-screen": "^0.2.2",
+    "react-hover": "^3.0.1",
     "react-icons": "^3.0.4",
     "react-iframe": "^1.2.0",
     "react-image-gallery": "^1.0.8",
