--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@ckeditor/ckeditor5-react": "^2.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
-    "@fortawesome/react-fontawesome": "0.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.16",
     "@fullcalendar/daygrid": "^5.3.0",
     "@fullcalendar/interaction": "^5.3.0",
     "@fullcalendar/react": "^5.3.0",
@@ -16,7 +16,7 @@
     "@react-latest-ui/react-sticky-notes": "^0.2.6",
     "@react-pdf/renderer": "^1.6.10",
     "@uiw/react-markdown-editor": "^2.0.0",
-    "axios": "^0.21.1",
+    "axios": "^0.24.0",
     "bootstrap": "^4.5.0",
     "draft-js": "^0.11.7",
     "gh-pages": "^2.2.0",
@@ -33,7 +33,7 @@
     "react-awesome-button": "^6.5.1",
     "react-bootstrap": "^1.3.0",
     "react-calendar": "^3.1.0",
-    "react-clock": "^2.4.0",
+    "react-clock": "^3.0.0",
     "react-dom": "^16.4.1",
     "react-fontawesome": "^1.6.1",
     "react-froala-wysiwyg": "^2.8.4",
@@ -49,20 +49,20 @@
     "react-read-pdf": "^2.0.9",
     "react-resize-detector": "^5.0.7",
     "react-responsive-carousel": "^3.2.9",
-    "react-router": "^5.2.0",
+    "react-router": "^6.2.1",
     "react-scripts": "3.2.0",
     "react-syntax-highlighter": "^13.5.1",
-    "react-three-fiber": "^3.0.3",
+    "react-three-fiber": "^3.0.17",
     "react-trumbowyg": "^1.1.0",
     "react-viewer": "^3.2.2",
     "request": "^2.88.0",
     "semantic-ui-react": "^1.2.1",
-    "three": "^0.109.0",
+    "three": "^0.110.0",
     "webpack": "4.41.0",
-    "yargs-parser": "^19.0.1"
+    "yargs-parser": "^21.0.0"
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0",
+    "gh-pages": "^3.2.3",
     "react-app-rewired": "^2.1.6"
   },
   "scripts": {
